# CLIP_test

./: .gitignore  hubconf.py  pyproject.toml
notebooks/: train.py
